[package]
edition      = "2024"
name         = "esp32-fan"
rust-version = "1.96"
version      = "0.1.0"

[[bin]]
name = "esp32-fan"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name    = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "~1.1.0", features = ["defmt", "esp32c3", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "defmt",
  "embassy",
  "esp32c3",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c3"] }

embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time     = { version = "0.5.0", features = ["defmt"] }
embassy-sync     = { version = "0.8.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target       = { version = "0.6.2", features = ["defmt"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

# math functions, specifically sqrt
libm = "0.2.16"

[dev-dependencies]
embedded-test = { version = "0.7.1", features = [
  "defmt",
  "embassy-010",
  "external-executor",
] }

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
