[package]
edition      = "2024"
name         = "esp-fan"
rust-version = "1.96"
version      = "0.1.0"
description  = "A small esp-hal based project for an esp32c3 to use binary switches to control a PWM signal"
license      = "MIT"
repository   = "https://www.github.com/b-n/esp-fan"
readme       = "README.md"
keywords     = ["esp-hal"]
categories   = ["embedded", "no-std"]

[[bin]]
name = "esp-fan"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name    = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "~1.1.0", features = ["defmt", "esp32c3", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "defmt",
  "embassy",
  "esp32c3",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c3"] }

embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time     = { version = "0.5.0", features = ["defmt"] }
embassy-sync     = { version = "0.8.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target       = { version = "0.6.2", features = ["defmt"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

# math functions, specifically sqrt
libm = "0.2.16"

[dev-dependencies]
embedded-test = { version = "0.7.1", features = [
  "defmt",
  "embassy-010",
  "external-executor",
] }

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = { "level" = "allow" }
large_stack_frames = "deny"
# mem::forget is generally not safe to do with esp_hal types, especially those holding buffers for the duration of a data transfer.
mem_forget = "deny"


[lints.rust]
unknown_lints = { level = "allow", priority = 1 }
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_qualifications = "warn"
warnings = "warn"
keyword-idents = "warn"
