[package]
name = "esp-fan"
version = "0.1.0"
categories = ["embedded", "no-std"]
edition = "2024"
homepage = "https://github.com/b-n/esp-fan"
keywords = ["esp-hal"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/b-n/esp-fan"
rust-version = "1.96"
description = "A small esp-hal based project for an esp32c3 to use binary switches to control a PWM signal"

[[bin]]
name = "esp-fan"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name = "pwm_test"

[lib]
test = false

[dependencies]
# formatting and printing
defmt = "1.0.1"

# Root ESP libs
esp-alloc = { version = "0.10.0", features = ["defmt"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c3"] }
esp-hal = { version = "~1.1.0", features = ["defmt", "esp32c3", "unstable"] }
esp-radio = { version = "1.0.0-beta.0", features = ["defmt", "esp-alloc", "esp32c3", "unstable", "wifi"] }
esp-rtos = { version = "0.3.0", features = ["defmt", "embassy", "esp32c3", "esp-alloc", "esp-radio"] }

# Debugging (real time transfer)
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }

# async runtime things
critical-section = "1.2.0"
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-net = { version = "0.9.1", features = ["defmt","dhcpv4","medium-ethernet","tcp", # Enable ping response
  "icmp","auto-icmp-echo-reply",] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
static_cell = "2.1.1"

# http server
heapless = "0.9.3"
nanofish = { version = "0.12.0", features = ["defmt"] }

# no_std code abstracted for test running
utils = { path = "utils" }

[dev-dependencies]
embedded-test = { version = "0.7.1", features = ["defmt", "embassy-010", "external-executor"] }

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2 # prefer slower builds but better debugging experience
lto = 'fat'
opt-level = 's'

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = { "level" = "allow" }
large_stack_frames = "deny"
# mem::forget is generally not safe to do with esp_hal types, especially those holding buffers for the duration of a data transfer.
mem_forget = "deny"

[lints.rust]
unknown_lints = { level = "allow", priority = 1 }
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_qualifications = "warn"
warnings = "warn"
keyword-idents = "warn"
