[package]
name = "utils"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/b-n/esp-fan"
license = "MIT"
repository = "https://github.com/b-n/esp-fan"
rust-version = "1.96"

[dependencies]
# math functions, specifically sqrt
libm = { version = "0.2.16", features = ["unstable-public-internals"] }
portable-atomic = { version = "1.13.1", features = ["float"] }
